@@ -1,4 +1,8 @@
-﻿svs 12.01.2016 22:10:42 +0300 - build 4508
+﻿drkns 14.01.2016 22:05:38 +0200 - build 4509
+
+1. 0003151: Переход на новую строку при сдвиге блока граббера в поточном режиме
+
+svs 12.01.2016 22:10:42 +0300 - build 4508
 
 1. SQLite 3.10.0
 
